[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "labeltools"
version = "0.1.0"
description = "N/A"
authors = ["XU <gxu@cloume.com>"]
packages = [
    { include = "labelme2coco.py" },
    { include = "generate_coco.py" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
